--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,69 @@
-body {
-  /* background-color: black !important; */
+@font-face {
+  font-family: "Market_Deco";
+  src: local("Market_Deco"), url("./fonts/Market_Deco.ttf") format("truetype");
+  font-weight: bold;
 }
 
-h1, h2, h3, h4, p, tr, td {
-  /* color: white !important; */
+body {
+  background-color: black !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+p,
+th,
+td {
+  color: white !important;
+}
+
+table,
+th,
+td {
+  border: 1px solid white;
+}
+
+td {
+  text-align: center;
+}
+
+.main-table {
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.title {
+  font-family: "Market_Deco";
+  font-size: 40px;
+  text-align: center;
+  color: white;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-name {
+  font-family: "Market_Deco";
+  color: white;
+  font-size: 2.5em;
+  margin-top: 0.2em;
+}
+
+.header-border-box {
+  display: flex;
+  padding: 8px;
+  border: 5px solid white;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.torque-logo {
+  width: 60px;
+  height: 60px;
 }
