--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,8 @@ h1,
 h2,
 h3,
 h4,
-p
+p,
+label
 {
   color: white !important;
 }
@@ -30,4 +31,12 @@ p
 
 .black-bg {
   background-color: black; 
+}
+
+.dropdown-toggle {
+  width: 10rem;
+}
+
+.form-control {
+  /* border-radius: 0.5rem; */
 }
