General app flow complete

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  background-color: black !important;
+  /* background-color: black !important; */
+  background-color: rgb(34, 37, 41);
   padding: 0;
 }
 
@@ -32,6 +33,19 @@ label
 .black-bg {
   background-color: black; 
 }
+
+.dark-gray-bg {
+  background-color: rgb(24, 26, 27);
+}
+
+.med-gray-bg {
+  background-color: rgb(34, 37, 41);
+}
+
+.lite-gray-bg {
+  background-color: rgb(45, 48, 52);
+}
+
 
 .dropdown-toggle {
   /* width: 10rem; */
