--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,8 @@
 
 body {
   /* background-color: black !important; */
-  background-color: rgb(34, 37, 41);
+  /* background-color: rgb(34, 37, 41); */
+  background-color:rgb(45, 48, 52);
   padding: 0;
 }
 
@@ -20,14 +21,24 @@ label
   color: white !important;
 }
 
-.title {
+a {
+  color: lightskyblue;
+}
+
+.use-market-deco {
   font-family: "Market_Deco";
-  height: 4rem;
+}
+
+.header {
+  margin-bottom: 1.25rem;
+  padding: 1rem;
 }
 
 .torque-logo {
-  width: 3rem;
+  /* width: 3rem; */
+  /* height: 3rem; */
   height: 3rem;
+  width: auto;
 }
 
 .black-bg {
