--- a/client/src/index.css
+++ b/client/src/index.css
@@ -100,3 +100,23 @@ a {
 .details-view {
   height: 12rem;
 }
+
+.fixed-header tbody{
+  overflow:auto;
+  max-height: 10rem;
+  min-width: 100%;
+  display: inline-block;
+}
+
+.fixed-header tbody tr {
+  width: 20rem;
+  height: 2rem;
+}
+
+.fixed-header tbody tr td {
+  width: 100rem;
+}
+
+.fixed-header thead tr{
+  display:contents;
+}
