Searching by status and subteam

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,10 @@
   fill: black !important;
 }
 
+.form-check-label {
+  color: black !important;
+}
+
 .popup {
   width: 5rem;
   padding: 0.5rem;
